# clawBro

./: Cargo.toml  README.md  README_JA.md  README_KO.md  README_ZH.md  rename-content.sh  rename-files.sh  verify-rename.sh
crates/clawbro-agent/: Cargo.toml
crates/clawbro-agent-sdk/: Cargo.toml  README.md
crates/clawbro-agent-sdk/src/: bridge.rs  config.rs  engine.rs  lib.rs  runtime_bridge.rs
crates/clawbro-agent-sdk/src/tools/: bash.rs  mod.rs  search.rs
crates/clawbro-agent/src/: bindings.rs  context_assembly.rs  control_reply.rs  dedup.rs  memory_service.rs  mode_selector.rs  output_sink.rs  persona.rs  post_turn.rs  prompt_builder.rs  registry.rs  relay.rs  routing.rs  runtime_dispatch.rs  slash.rs  slash_service.rs  traits.rs  turn_context.rs
crates/clawbro-agent/src/control/: mod.rs  role_resolver.rs  session_router.rs  turn_intent.rs
crates/clawbro-agent/src/memory/: distiller.rs  event.rs  mod.rs  store.rs  system.rs  trigger.rs
crates/clawbro-agent/src/team/: completion_routing.rs  heartbeat.rs  orchestrator.rs  registry.rs  session.rs  shared_mcp_server.rs  specialist_turn.rs  tool_executor.rs
crates/clawbro-agent/tests/: mixed_backend_team.rs
crates/clawbro-channels/: Cargo.toml
crates/clawbro-channels/src/: dingtalk.rs  lark.rs  lib.rs  mention_parsing.rs  mention_trigger.rs  traits.rs  wechat.rs  wechat_login.rs
crates/clawbro-cron/: Cargo.toml
crates/clawbro-cron/src/: lib.rs  models.rs  schedule.rs  scheduler.rs  service.rs  store.rs
crates/clawbro-protocol/: Cargo.toml  README.md
crates/clawbro-protocol/src/: events.rs  lib.rs  session_key_codec.rs
crates/clawbro-runtime/: Cargo.toml
crates/clawbro-runtime/src/: adapter.rs  backend.rs  backend_resume.rs  codex_local_config.rs  conductor.rs  contract.rs  helper_contract.rs  lib.rs  observability.rs  registry.rs  testing.rs  tool_bridge.rs
crates/clawbro-runtime/src/acp/: adapter.rs  mod.rs  probe.rs  session_driver.rs
crates/clawbro-runtime/src/native/: adapter.rs  probe.rs  session_driver.rs
crates/clawbro-runtime/src/openclaw/: adapter.rs  client.rs  lead_bridge.rs  mod.rs  probe.rs  team_bridge.rs
crates/clawbro-runtime/tests/: acp_backend_matrix.rs  codex_local_config.rs
crates/clawbro-rust-agent/: Cargo.toml  README.md
crates/clawbro-rust-agent/src/: agent.rs  lib.rs  main.rs  native_runtime.rs  team.rs
crates/clawbro-rust-agent/tests/: acp_handshake.rs
crates/clawbro-server/: Cargo.toml  README.md
crates/clawbro-server/builtin-skills/scheduler/: SKILL.md
crates/clawbro-server/host-skills/team-lead/: SKILL.md
crates/clawbro-server/host-skills/team-specialist/: SKILL.md
crates/clawbro-server/src/: channel_registry.rs  config.rs  delivery_resolver.rs  diagnostics.rs  gateway_process.rs  im_sink.rs  lib.rs  main.rs  progress_presentation.rs  scheduler_runtime.rs  state.rs  team_runtime.rs
crates/clawbro-server/src/agent_core/: bindings.rs  context_assembly.rs  lib.rs  memory_service.rs  mod.rs  mode_selector.rs  output_sink.rs  persona.rs  post_turn.rs  prompt_builder.rs  registry.rs  relay.rs  roster.rs  routing.rs  runtime_dispatch.rs  skill_paths.rs  slash.rs  slash_service.rs  traits.rs  turn_context.rs
crates/clawbro-server/src/agent_sdk_internal/: bridge.rs  config.rs  engine.rs  runtime_bridge.rs
crates/clawbro-server/src/channels_internal/: allowlist.rs  dingtalk.rs  dingtalk_webhook.rs  dingtalk_webhook_dedup.rs  dingtalk_webhook_mapper.rs  dingtalk_webhook_reply.rs  dingtalk_webhook_richtext.rs  dingtalk_webhook_types.rs  lark.rs  mention_trigger.rs  mod.rs  traits.rs  wechat.rs  wechat_login.rs  ws_virtual.rs
crates/clawbro-server/src/cli/: args.rs  auth.rs  completions.rs  config_agent_cmd.rs  config_apply.rs  config_backend.rs  config_binding.rs  config_builders.rs  config_channel.rs  config_cmd.rs  config_delivery.rs  config_diff.rs  config_draft.rs  config_keys.rs  config_model.rs  config_patch.rs  config_provider.rs  config_report.rs  config_store.rs  config_team_scope_cmd.rs  config_validate.rs  config_wizard.rs  doctor.rs  env.rs  i18n.rs  internal_agent.rs  mod.rs  schedule.rs  serve.rs  skills.rs  status.rs  team_helper.rs
crates/clawbro-server/src/cron_internal/: mod.rs  scheduler.rs
crates/clawbro-server/src/embedded_agent/: mod.rs  (+4 more)
crates/clawbro-server/tests/: e2e_gateway.rs  e2e_lark.rs
crates/clawbro-skills/: Cargo.toml
crates/clawbro-skills/src/: identity.rs  lib.rs  loader.rs  manifest.rs  mbti.rs  persona_skill.rs
crates/qai-agent/: Cargo.toml
crates/qai-agent/src/: acp_engine.rs  approval.rs  bindings.rs  context_assembly.rs  dedup.rs  lib.rs  memory_service.rs  output_sink.rs  persona.rs  post_turn.rs  prompt_builder.rs  registry.rs  relay.rs  roster.rs  routing.rs  runtime_dispatch.rs  selector.rs  slash.rs  slash_service.rs  traits.rs  turn_context.rs
crates/qai-agent/tests/: mixed_backend_team.rs
crates/qai-channels/: Cargo.toml
crates/qai-channels/src/: allowlist.rs  dingtalk.rs  lark.rs  lib.rs  mention_trigger.rs  traits.rs
crates/qai-cron/: Cargo.toml
crates/qai-cron/src/: condition.rs  scheduler.rs  store.rs
crates/qai-protocol/: Cargo.toml  README.md
crates/qai-protocol/src/: events.rs  lib.rs  runtime_contract.rs  types.rs
crates/qai-runtime/: Cargo.toml
crates/qai-runtime/src/: adapter.rs  approval.rs  backend.rs  backend_resume.rs  codex_local_config.rs  conductor.rs  contract.rs  event_sink.rs  lib.rs  observability.rs  provider_profiles.rs  registry.rs  testing.rs  tool_bridge.rs
crates/qai-runtime/tests/: acp_backend_matrix.rs  codex_local_config.rs
crates/qai-server/: Cargo.toml
crates/qai-server/src/: channel_registry.rs  config.rs  delivery_resolver.rs  diagnostics.rs  im_sink.rs  lib.rs  main.rs  state.rs  team_runtime.rs
crates/qai-server/tests/: e2e_gateway.rs  e2e_lark.rs
crates/qai-session/: Cargo.toml
crates/qai-session/src/: key.rs  lib.rs  manager.rs  storage.rs
crates/quickai-rust-agent/: Cargo.toml  README.md
crates/quickai-rust-agent/src/: agent.rs  lib.rs  main.rs  native_runtime.rs  team.rs
crates/quickai-rust-agent/tests/: acp_handshake.rs
(+241 files in other folders)
