[workspace]
resolver = "2"
members = [
    "crates/qai-protocol",
    "crates/qai-runtime",
    "crates/qai-session",
    "crates/qai-agent",
    "crates/qai-channels",
    "crates/qai-skills",
    "crates/qai-cron",
    "crates/qai-server",
]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"
async-trait  = "0.1"
axum         = { version = "0.8", features = ["ws"] }
reqwest      = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1.6", features = ["v4", "v5", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap      = "5.5"
dirs         = "5"
toml         = "0.9"
tempfile     = "3"
tokio-test   = "0.4"
