[package]
name = "clawbro-channels"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
clawbro-protocol  = { path = "../clawbro-protocol", version = "0.1.0" }
tokio.workspace    = true
futures.workspace  = true
async-trait.workspace = true
reqwest.workspace  = true
serde.workspace    = true
serde_json.workspace = true
anyhow.workspace   = true
tracing.workspace  = true
uuid.workspace     = true
chrono.workspace   = true
tokio-tungstenite  = { version = "0.26", features = ["rustls-tls-native-roots"] }
dirs.workspace     = true
prost.workspace    = true

[dev-dependencies]
tempfile = "3"
