[package]
name = "clawbro-runtime"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
clawbro-protocol = { path = "../clawbro-protocol", version = "0.1.0" }
clawbro-agent-sdk = { path = "../clawbro-agent-sdk", version = "0.1.0" }
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing.workspace = true
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_usage"] }
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
