[package]
name = "clawbro"
version = "0.1.1"
edition = "2021"
rust-version = "1.90"
autobins = false
description = "ClawBro AI runtime and CLI"
license = "MIT"
repository = "https://github.com/fishers/clawbro"
readme = "README.md"
keywords = ["ai", "agent", "cli", "runtime"]
categories = ["command-line-utilities"]

[features]
default = []
internal-bins = []
internal-sdk-tests = []

[lib]
name = "clawbro"
path = "src/lib.rs"

[[bin]]
name = "clawbro"
path = "src/bin/clawbro_cli.rs"

[dependencies]
tokio.workspace    = true
chrono.workspace   = true
futures.workspace  = true
axum.workspace     = true
serde.workspace    = true
serde_json.workspace = true
anyhow.workspace   = true
tracing.workspace  = true
tracing-subscriber.workspace = true
uuid.workspace     = true
toml.workspace     = true
dirs.workspace     = true
async-trait.workspace = true
reqwest.workspace = true
dashmap.workspace = true
prost.workspace = true
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_usage"] }
clap.workspace          = true
clap_complete.workspace = true
dialoguer.workspace     = true
console.workspace       = true
which.workspace         = true
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rmcp = { version = "=0.8.5", features = ["client", "server", "transport-sse-client-reqwest", "transport-sse-server", "transport-streamable-http-server"] }
rmcp16 = { package = "rmcp", version = "0.16.0", features = ["client", "transport-streamable-http-client-reqwest"] }
rig = { package = "rig-core", version = "0.33.0", features = ["rmcp"] }
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.31", features = ["bundled"] }
cron = "0.12"
glob = "0.3"
walkdir = "2.5"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
