[package]
name = "clawbro-skills"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
dirs.workspace       = true
tokio.workspace      = true

[dev-dependencies]
tempfile.workspace = true
