[package]
name = "qai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
qai-protocol  = { path = "../qai-protocol" }
qai-session   = { path = "../qai-session" }
qai-skills    = { path = "../qai-skills" }
qai-channels  = { path = "../qai-channels" }
tokio.workspace      = true
futures.workspace    = true
async-trait.workspace = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
uuid.workspace       = true
dashmap.workspace    = true
agent-client-protocol = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }
rmcp = { version = "0.8.3", features = ["server", "transport-sse-server"] }
chrono.workspace     = true
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
