[package]
name = "qai-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
qai-protocol  = { path = "../qai-protocol" }
tokio.workspace    = true
futures.workspace  = true
async-trait.workspace = true
reqwest.workspace  = true
serde.workspace    = true
serde_json.workspace = true
anyhow.workspace   = true
tracing.workspace  = true
uuid.workspace     = true
chrono.workspace   = true
tokio-tungstenite  = { version = "0.26", features = ["rustls-tls-native-roots"] }
dirs.workspace     = true

[dev-dependencies]
tempfile = "3"
