[package]
name = "qai-protocol"
version = "0.1.0"
publish = false
edition = "2021"
description = "Host-neutral runtime contract for QuickAI runtimes, shells, and gateways"
license = "MIT"
repository = "https://github.com/fishers/quickai-openclaw"
readme = "README.md"
keywords = ["ai", "agent", "protocol", "runtime"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde.workspace      = true
serde_json.workspace = true
uuid.workspace       = true
chrono.workspace     = true
