[package]
name = "qai-server"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
name = "qai_server"
path = "src/lib.rs"

[[bin]]
name = "quickai-gateway"
path = "src/main.rs"

[[bin]]
name = "qai-team-cli"
path = "src/bin/qai_team_cli.rs"

[[bin]]
name = "qai_acp_approval_fixture"
path = "src/bin/qai_acp_approval_fixture.rs"

[[bin]]
name = "quickai"
path = "src/bin/quickai_cli.rs"

[dependencies]
qai-protocol  = { path = "../qai-protocol", version = "0.1.0" }
qai-session   = { path = "../qai-session", version = "0.1.0" }
qai-agent     = { path = "../qai-agent", version = "0.1.0" }
qai-runtime   = { path = "../qai-runtime", version = "0.1.0" }
qai-channels  = { path = "../qai-channels", version = "0.1.0" }
qai-skills    = { path = "../qai-skills", version = "0.1.0" }
qai-cron      = { path = "../qai-cron", version = "0.1.0" }
tokio.workspace    = true
chrono.workspace   = true
futures.workspace  = true
axum.workspace     = true
serde.workspace    = true
serde_json.workspace = true
anyhow.workspace   = true
tracing.workspace  = true
tracing-subscriber.workspace = true
uuid.workspace     = true
toml.workspace     = true
dirs.workspace     = true
async-trait.workspace = true
reqwest.workspace = true
agent-client-protocol = { version = "0.10.2" }
clap.workspace          = true
clap_complete.workspace = true
dialoguer.workspace     = true
console.workspace       = true
which.workspace         = true
tokio-util = { version = "0.7", features = ["compat"] }
rmcp = { version = "=0.8.5", features = ["client", "transport-sse-client-reqwest"] }
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
qai-channels = { path = "../qai-channels", version = "0.1.0" }
qai-protocol = { path = "../qai-protocol", version = "0.1.0" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
