[package]
name = "qai-session"
version = "0.1.0"
edition = "2021"

[dependencies]
qai-protocol  = { path = "../qai-protocol" }
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
uuid.workspace        = true
chrono.workspace      = true
anyhow.workspace      = true
tracing.workspace     = true
dashmap.workspace     = true
dirs.workspace        = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
